--- a/Index.html
+++ b/Index.html
@@ -198,7 +198,7 @@
                 </div><!--mapa-->
                 <div class="clear"></div>
 
-                <img src="/imagens/latencia.png" style="width: 100%; margin-top: 50px; border-radius: 0;"/>
+                <img src="imagens/latencia.png" style="width: 100%; margin-top: 50px; border-radius: 0;"/>
 
             </div><!--center-->
         </section><!--sessão de formulário-->
@@ -211,7 +211,7 @@
 
                 <h4>A rede abaixo da grande rede</h4>
                 <p>A rede da deep web fica separada da internet superficial. Ela é normalmente explicada como um ambiente obscuro e perigoso. Isso acontece pela recorrente confusão entre os termos "deep web" e "dark web".</p>
-                <img src="/imagens/iceberg.png" style="width: 50%; margin: 0 auto; display: block; border-radius: 20px;"/>
+                <img src="imagens/iceberg.png" style="width: 50%; margin: 0 auto; display: block; border-radius: 20px;"/>
                 <p>Na deep web esta todo o conteúdo restrito ao publico e que precisa ser guardado com segurança. Ela contém os domínios necessários para operação da Web, como quando usamos nossa senha para acessar dados pessoais.</p>
             </div>
         </section><!--deep-->
