Ajustando os textos

--- a/Index.html
+++ b/Index.html
@@ -168,11 +168,11 @@
                     <h2>Como funciona</h2>
                     <p>A internet conecta bilhões de dispositivos ao mesmo tempo. Isso é possível graças aos protocolos de conexão entre redes de computadores.</p>
                     
-                    <p>- Quando você conecta dois computadores, cria uma rede (network).</p>
+                    <p style="font-weight: bold;">- Quando você conecta dois computadores, cria uma rede (network).</p>
                     <img src="imagens/rede1.png"/>
                     <p class="legendinha">Uma rede simples, formada por dois computadores conectados</p>
 
-                    <p>- Quando alguém conecta vários computadores, forma-se uma outra rede.</p>
+                    <p style="font-weight: bold;">- Quando alguém conecta vários computadores, forma-se uma outra rede.</p>
                     <img src="imagens/rede2.png" style="width: 70%;"/>
                     <p class="legendinha">Rede um pouco mais complexa, com vários computadores conectados</p>
 
